# OperatingSystems

./: README.md  ~WRL0001.tmp
laba_1/: 2024_OC_Лаб_01_CmdWindows.docx  MyAnsver.docx
laba_1/bat_01/: test.bat
laba_1/bat_02/: Z03-02-2.bat  Z03-02.bat  hello.xlsx
laba_2/: MyAnsver.docx  lab2.xlsx
laba_2/Scripts/: .Start.sh.swo  GetDate.sh  Start.sh
laba_3/: answers.docx
laba_3/laba_3/: laba_3.sln
laba_3/laba_3/OS03_02/: OS03_02.cpp  OS03_02.vcxproj
laba_3/laba_3/OS03_02_1/: OS03_02_1.cpp  OS03_02_1.vcxproj
laba_3/laba_3/OS03_02_2/: OS03_02_2.cpp  OS03_02_2.vcxproj
laba_3/laba_3/OS03_03/: OS03_03.cpp  OS03_03.vcxproj
laba_3/laba_3/OS03_1/: OS03_01.cpp  OS03_1.vcxproj
laba_3/test/res/: OS03_04  OS03_05  OS03_05_1  OS03_06  OS03_07
laba_3/test/src/: OS03_04.c  (+4 more)
laba_4/: tasks.docx  ~$nask.docx
laba_4/OS04_04/: OS04_04.sln
laba_4/laba_4/: laba_4.sln
laba_4/lin/: OS04_11  OS04_11.c
laba_5/OS05_01/: OS05_01.sln
laba_5/OS05_02/: OS05_02.sln
laba_5/doc/: answers.docx  result.docx
laba_6/lin/: CMakeLists.txt  build.sh
laba_6/win/: CMakeLists.txt  build.bat
laba_6/win/src/: lab_61.cpp  lab_62.cpp  lab_63.cpp  lab_63_child.cpp  lab_64.cpp  lab_64_child.cpp  lab_65.cpp  lab_65_child.cpp
laba_8/: answers.docx
laba_8/lin/: command.txt
laba_8/win/: ans.docx  getMemory.bat
laba_9/: OC_Лабораторная_работа_09_ФайловаяСистема.docx  OS09_01.txt  OS09_02.txt  OS09_05.txt  answers.docx
laba_9/lin/: CMakeLists.txt  build.sh
laba_9/win/: CMakeLists.txt  build.bat
laba_9/win/src/: OS09_01.cpp  OS09_02.cpp  OS09_03.cpp  OS09_04.cpp
(+234 files in other folders)
