cmake_minimum_required(VERSION 3.29)

project(lab_61)
project(lab_62)
project(lab_63)
project(lab_63A)
project(lab_63B)
project(lab_64)
project(lab_64A)
project(lab_64B)
project(lab_65)
project(lab_65A)
project(lab_65B)

add_executable(lab_61 src/lab_61.cpp)
add_executable(lab_62 src/lab_62.cpp)
add_executable(lab_63 src/lab_63.cpp)
add_executable(lab_63A src/lab_63_child.cpp)
add_executable(lab_63B src/lab_63_child.cpp)
add_executable(lab_64 src/lab_64.cpp)
add_executable(lab_64A src/lab_64_child.cpp)
add_executable(lab_64B src/lab_64_child.cpp)
add_executable(lab_65 src/lab_65.cpp)
add_executable(lab_65A src/lab_65_child.cpp)
add_executable(lab_65B src/lab_65_child.cpp)